syntax = "proto3";

package tokenauthorization;

option go_package = "github.com/satimoto/go-ocpi/ocpirpc";

service TokenAuthorizationService {
    rpc UpdateTokenAuthorization(UpdateTokenAuthorizationRequest) returns (UpdateTokenAuthorizationResponse);
};

message UpdateTokenAuthorizationRequest {
    string authorization_id = 1;
    bool authorize = 2;
};

message UpdateTokenAuthorizationResponse {
    bool ok = 1;
};
